updated personal archive
nemesis

--- a/style.css
+++ b/style.css
@@ -84,6 +84,30 @@ blockquote {
 	margin-left: 6em;
 }
 
+.serenicelogo {
+	margin-left: 17em;
+}
+
+.packagingtop {
+	margin-left: 1em;
+}
+
+.packagingfront {
+	margin-left: 17em;
+}
+
+.spoon {
+	margin-left: 17em;
+}
+
+.fridgephoto {
+	margin-left: 24em;
+}
+
+.documentation {
+	margin-left: 6em;
+}
+
 .lucky {
 	margin-left: 30em;
 }
@@ -134,4 +158,9 @@ blockquote {
 
 .nemesis-sketches {
 	margin-left: 6em
+}
+
+.genieben {
+	margin-left: 18em
+
 }
