--- a/stylemaster.css
+++ b/stylemaster.css
@@ -66,6 +66,7 @@ p {
 
 img {
 	text-align: center;
+	width: 600px;
 	display: block;
 	position: static;
 	margin: 30px auto;
@@ -88,5 +89,5 @@ li.index a:hover{
 } 
 
 div.manual img {
-	width: 800px
+	width: 600px
 }
